# Bridget

./: adult_calibration.ipynb  b_xai_test.py  bridget_adult.ipynb  bridget_cdc_diabetes.ipynb  bridget_compas.ipynb  bridget_dutch.ipynb  bridget_elec2.ipynb  bridget_mod.py  bridget_utils.py  cdc_diabetes_calibration.ipynb  classes.py  compas_calibration.ipynb  compas_results.ipynb  dutch_calibration.ipynb  experts_adult.yaml  experts_cdc_diabetes.yaml  experts_compas.yaml  experts_dutch.yaml  experts_elec2.yaml  misc.py
MIC_res/Adultaccurate_trusting_Mao/: User_accurate_trustingDefNetDICE_mic_metrics.json  User_accurate_trustingDefNetDefNet_Accuracy.txt  User_accurate_trustingDefNetDefNet_Confidence.txt  User_accurate_trustingDefNetLORE_mic_metrics.json  User_accurate_trustingDefNetMiC_Accuracy.txt  User_accurate_trustingDefNetMiC_model_FEA.txt  User_accurate_trustingDefNetmodel.pkl  User_accurate_trustingDefNettimes_DICE_mic.txt  User_accurate_trustingDefNettimes_LORE_mic.txt
coipee/: README.md  pyproject.toml
coipee/src/coipee/: __init__.py  artifacts.py
coipee/src/coipee/detectors/: __init__.py
coipee/src/coipee/explanations/: __init__.py
coipee/src/coipee/generators/: base.py  gaussian.py
datasets/: analisi adult.ipynb  analisi cdc.ipynb  native-country map.xlsx  recidivism-risk_odsc.csv
lore_explainer/: explanation.py  lorem.py  rule.py
r_nets/Adult/: r_net_acc_nt.pth  r_net_acc_t.pth  r_net_inacc_nt.pth  r_net_inacc_t.pth
r_nets/CDC/: r_net_acc_nt.pth  r_net_acc_t.pth  r_net_inacc_nt.pth  r_net_inacc_t.pth
r_nets/compas/: r_net_acc_nt.pth  (+3 more)
(+632 files in other folders)
